deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notepad
  labels:
    app: notepad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notepad
  template:
    metadata:
      labels:
        app: notepad
    spec:
      containers:
      - name: notepad
        image : REPLACE_IMAGE
        ports:
        - containerPort: 8080
