service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notepad-service
  labels:
    app: notepad
spec:
  selector:
    app: notepad
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
