route.yaml
apiVersion: v1
kind: Route
metadata:
  name: notepad-route
  namespace: default
  labels:
    app: notepad
spec:
  to:
    kind: Service
    name: notepad-service
  port:
    targetPort: 8080
